modification of all files, as game is improving

--- a/style.css
+++ b/style.css
@@ -8,14 +8,46 @@ body {
     background-color: #000;
   }
   
+  #game-container {
+    position: relative;
+    width: 350px;
+    height: 700px;
+    text-align: center;
+    border: 1px solid white; /* Add a border to visualize the container */
+    background-color: #222; /* Add a background color for contrast */
+    overflow: hidden;
+  }
+
+  #start-button {
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+
+    /* For visualization */
+    background-color: rgb(89, 225, 249);
+    border: 2px solid #000000;
+    z-index: 1000;
+}
+
+.timer {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    font-size: 20px;
+    color: white;
+    background-color: black;
+    padding: 10px;
+    border-radius: 5px;
+    z-index: 1000; /* Ensure it's on top of other game elements */
+}
+
   #gameArea {
     position: relative;
     width: 350px;
     height: 700px;
     margin: 0 auto;
     overflow: hidden;
-    background-color: rgb(248, 213, 160); 
-    border: 2px solid rgb(251, 74, 4);
+    text-align: center;
   }
   
   #car {
@@ -24,7 +56,7 @@ body {
     width: 30px;
     height: 60px;
     background-color: rgb(227, 15, 92); 
-    border: 2px solid rgb(239, 237, 67);
+    border: 2px solid rgb(240, 240, 120);
     left: 50%; 
     transform: translateX(-50%); 
     transition: none; 
@@ -33,44 +65,17 @@ body {
   #road {
     position: absolute;
     width: 100%;
-    height: 200%;
-    top: -100%;
-    background: repeating-linear-gradient(
-      to bottom,
-      gray 0,
-      gray 46%,
-      white 46%,
-      white 50%
-    );
-    animation: moveRoad 2s linear infinite;
+    height: 100%;
+    background-color: grey; 
+    border: 2px solid rgb(251, 74, 4);
   }
   
-  @keyframes moveRoad {
-    0% {
-      top: -100%;
-    }
-    100% {
-      top: 0;
-    }
-  }
-  
-  .obstacle {
+  .static-obstacle {
     position: absolute;
     width: 30px;
     height: 60px;
     background-color: blue; 
     border: 2px solid yellow;
-    top: 0px; 
-    animation: moveObstacle 4s linear infinite;
-  }
-
-  @keyframes moveObstacle {
-    0% {
-      top: 0px;
-    }
-    100% {
-      top: 700px; 
-    }
   }
 
 #finish-line {
@@ -85,4 +90,4 @@ body {
     justify-content: center; /* Center the text horizontally */
     align-items: center; /* Center the text vertically */
     font-size: 20px; /* Adjust font size as needed */
-}
+} 
