--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ body {
     width: 350px;
     height: 700px;
     text-align: center;
-    border: 1px solid white; /* Add a border to visualize the container */
-    background-color: #222; /* Add a background color for contrast */
+    border: 1px solid white; 
+    background-color: #222;
     overflow: hidden;
   }
 
@@ -23,7 +23,7 @@ body {
     font-size: 18px;
     cursor: pointer;
 
-    /* For visualization */
+
     background-color: rgb(89, 225, 249);
     border: 2px solid #000000;
     z-index: 1000;
@@ -38,7 +38,7 @@ body {
     background-color: black;
     padding: 10px;
     border-radius: 5px;
-    z-index: 1000; /* Ensure it's on top of other game elements */
+    z-index: 1000; 
 }
 
   #gameArea {
@@ -52,7 +52,7 @@ body {
   
   #car {
     position: absolute;
-    top: 600px; /* Use a high initial top value */
+    top: 600px; 
     width: 30px;
     height: 60px;
     background-color: rgb(227, 15, 92); 
@@ -81,13 +81,13 @@ body {
 #finish-line {
     position: absolute;
     width: 100%;
-    height: 30px; /* Adjust height as needed */
+    height: 30px; 
     background-color: red;
-    top: 20px; /* Position it vertically where the finish line should be */
+    top: 20px; 
     left: 0;
     color: white;
     display: flex;
-    justify-content: center; /* Center the text horizontally */
-    align-items: center; /* Center the text vertically */
-    font-size: 20px; /* Adjust font size as needed */
+    justify-content: center; 
+    align-items: center; 
+    font-size: 20px; 
 } 
